# automic-monitor

./: .env  .env.template  .gitignore  FLOW_DOCUMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt  sample.ipynb  sampledata.txt  send_alert.py  verify_logs_ai.py
.claude/: settings.local.json
config/: logging.yaml
data/: automic_workflow_data.csv  business_rules.csv  config_workflows.csv  job_details.csv  processed_runs.csv  workflow_results.csv
docs/: PHASE1_SUMMARY.md  SETUP.md  STRUCTURE.md
jhp_prod_crl_modernization_v2/: a.py  analyse.py  analyse_file.py  automic_apis.py  configuration.py  dashboard.py  database_util.py  log_parser.py  main.py  parse.py  pyproject.toml  setup.ps1  simulate_filetransfer.py  ui_analysis_dashboard.py  utils.py  validation_rules.py
jhp_prod_crl_modernization_v2/dash_app/: app.py
jhp_prod_crl_modernization_v2/dash_app/data/: data_loader.py  db_utils.py
jhp_prod_crl_modernization_v2/dash_app/pages/: activator.py  alerts.py  analysis.py  incidents.py  job_analysis.py  log_analysis.py  overview.py  rules_config.py
src/: api_clients.py  automic_workflow_data.json  config.py  logger.py  processors.py  rule_engine.py  utils.py
src/ai/: __init__.py  client.py
src/automic/: __init__.py  apis.py  client.py
src/notifications/: __init__.py  email.py
src/processors/: __init__.py
src/utils/: __init__.py  csv_utils.py  log_parser.py  rule_engine.py
