[project]
name = "jhp-prod-crl-modernization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyodbc",
    "dash[cloud]>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "edi-835-parser>=1.8.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "pyx12>=2.3.3",
    "requests>=2.32.5",
    "setuptools<81",
    "sqlalchemy-access>=2.0.3",
    "tabulate>=0.10.0",
    "openpyxl>=3.1.5",
]
